--- a/index.html
+++ b/index.html
@@ -201,7 +201,10 @@
   }
 </script>
 
+<script src="js/util.js"></script>
+<script src="js/mock-data.js"></script>
 <script src="js/setup.js"></script>
+<script src="js/similar.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 <script src="js/dialog.js"></script>
